Using https url for git clone

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-spring.data.mongodb.uri=mongodb://localhost:27017/webflux_demo
+#spring.data.mongodb.uri=mongodb://localhost:27017/webflux_demo
+#spring.data.mongodb.uri=mongodb://callicoder:callicoder@ds161169.mlab.com:61169/testdatabase
+
+spring.data.mongodb.host=ds161169.mlab.com
+spring.data.mongodb.port=61169
+spring.data.mongodb.username=callicoder
+spring.data.mongodb.password=callicoder
+spring.data.mongodb.database=testdatabase
