--- a/pom.xml
+++ b/pom.xml
@@ -125,12 +125,35 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
+                <configuration>
+                    <testFailureIgnore>false</testFailureIgnore>
+                    <properties>
+                        <name>listener</name>
+                        <value>io.qameta.junit5.AllureJunit5</value>
+                    </properties>
+                    <systemProperties>
+                        <property>
+                            <name>allure.results.directory</name>
+                            <value>${project.basedir}/target/allure-results</value>
+                        </property>
+                        <property>
+                            <name>junit.jupiter.extensions.autodetection.enabled</name>
+                            <value>true</value>
+                        </property>
+                    </systemProperties>
+                    <reportFormat>plain</reportFormat>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-contract-maven-plugin</artifactId>
                 <extensions>true</extensions>
                 <version>2.2.4.RELEASE</version>
                 <configuration>
-                    <skip>true</skip>
+                    <skip>false</skip>
                     <packageWithBaseClasses>com.example.webfluxdemo.contract</packageWithBaseClasses>
                     <testMode>WEBTESTCLIENT</testMode>
                     <testFramework>JUNIT5</testFramework>
@@ -146,7 +169,11 @@
                 <artifactId>gatling-maven-plugin</artifactId>
                 <version>3.0.5</version>
             </plugin>
+            <plugin>
+                <groupId>io.qameta.allure</groupId>
+                <artifactId>allure-maven</artifactId>
+                <version>2.8</version>
+            </plugin>
         </plugins>
     </build>
-
 </project>
